--- a/src/styles/portfolio.css
+++ b/src/styles/portfolio.css
@@ -12,7 +12,7 @@
   --secondary: #0f766e;
   --secondary-dark: #0b5e58;
   --dark: #052e2b;
-  --darker: #031f1d;
+  --darker: #a8aead;
   --light: #f0fdfa;
   --lighter: #ffffff;
   --gray: #6b7280;
